<resources>
    <string name="app_name">MediTracker</string>
    <string name="label_email">Email</string>
    <string name="hint_email">Enter email</string>
    <string name="label_password">Password</string>
    <string name="hint_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="button_login">Login</string>
    <string name="button_github_sign_in">Sign in with GitHub</string>
    <string name="register_prompt">Don\'t have an account? Sign Up</string>
</resources>